--- a/src/components/InputBar/style.css
+++ b/src/components/InputBar/style.css
@@ -3,10 +3,20 @@
   border-color: transparent;
   outline: none;
 }
+*:where(.css-dev-only-do-not-override-1rqnfsa).ant-btn-default:not(:disabled):not(.ant-btn-disabled):active {
+  background: linear-gradient(to bottom right, #C9C9C94D, #C4C4C41A) padding-box, 
+  linear-gradient(to bottom left, #FFFFFF4D, #D3D3D31A) border-box;
+  border: none;
+}
 
-*, *:focus, *:hover{
+*, *:focus, *:hover, *:active, *:focus-within, *:focus-visible {
   box-shadow: none;
   outline: none !important;
+  transition: all 0.2s ease;
+}
+
+.ant-btn:active, .ant-btn:focus {
+  box-shadow: none;
 }
 
 .input-bar__background {
@@ -21,6 +31,11 @@
   border: none;
   box-shadow: none;
   height: 100%;
+  transition: transform 0.2s ease;
+}
+
+.emoji-button:hover {
+  transform: scale(1.1);
 }
 
 .emoji-button:where(.css-dev-only-do-not-override-1rqnfsa).ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
@@ -67,7 +82,7 @@
   box-shadow: none;
 }
 
-.attach-button:where(.css-dev-only-do-not-override-1rqnfsa).ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
+.attach-button:where(.css-dev-only-do-not-override-1rqnfsa).ant-btn-text:not(:disabled):not(.ant-btn-disabled):hover {
   background: transparent;
 }
 
@@ -75,10 +90,12 @@
   color: #E1E1E1;
   height: 1.5rem;
   width: 1.5rem;
+  transition: transform 0.2s ease;
 }
 
 .attach-button svg:hover {
   color: #FFFFFF;
+  transform: scale(1.1);
 }
 
 .send-button:where(.css-dev-only-do-not-override-1rqnfsa).ant-btn-lg.ant-btn-icon-only {
@@ -90,7 +107,6 @@
   max-height: 3rem;
   width: 6rem;
   max-width: 10vw;
-  transition: all 0.3s ease-in-out;
 }
 
 .send-button:where(.css-dev-only-do-not-override-1rqnfsa).ant-btn-lg.ant-btn-icon-only:hover {
@@ -100,8 +116,10 @@
 
 .send-button svg {
   color: #E1E1E1;
+  transition: transform 0.2s ease;
 }
 
 .send-button svg:hover {
   color: #FFFFFF;
+  transform: scale(1.1);
 }
