--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -2,30 +2,23 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: start;
   box-sizing: border-box;
-  padding: 0 20px;
   overflow: hidden;
   position: relative;
-}
-
-.register_background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   background-image: url("../../assets/background.png");
   background-size: cover;
-  z-index: -1;
-  filter: brightness(0.8);
+  padding: 0 15px;
 }
+
 
 .register_logo {
   align-items: center;
   justify-content: center;
   display: flex;
   width: 100%;
-  max-width: 420px;
+  max-width: 380px;
+  align-self: center;
 }
 
 .register_logo img {
