--- a/src/components/InputBar/style.css
+++ b/src/components/InputBar/style.css
@@ -20,10 +20,13 @@
 }
 
 .input-bar__background {
-  align-items: center;
   background: #17212B;
   display: flex;
   padding: 0 1rem;
+  box-sizing: border-box;
+  height: 100%;
+  gap: 20px;
+  align-items: center;
 }
 
 .emoji-button {
@@ -45,30 +48,33 @@
 .input-bar__container {
   align-items: center;
   display: flex;
-  height: 5rem;
-  padding-left: 2rem;
   width: 100%;
+  height: 40px;
 }
 
 .input-bar {
-  background:linear-gradient(to bottom right, #C9C9C94D, #C4C4C41A) padding-box, linear-gradient(to bottom right, #FFFFFF4D, #D3D3D31A) border-box;
-  border: 1px solid transparent;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.268) 0%, rgba(0,0,0,0) 100%);
+  border: 2px solid #454c56;
+  border-right: none;
+  box-sizing: border-box;
   color: #FFFFFF;
-  font-size: 1.5rem;
+  font-size: 17px;
   height: 100%;
   max-height: 3rem;
   padding: 0 1rem;
   width: 100%;
+  padding-bottom: 5px;
 }
 
-.input-bar input::placeholder {
+.input-bar::placeholder {
   color: #FFFFFF80;
 }
 
 .input-bar:hover, .input-bar:focus, .input-bar:focus-within {
-  background:linear-gradient(to bottom right, #C9C9C94D, #C4C4C41A) padding-box, linear-gradient(to bottom right, #FFFFFF4D, #D3D3D31A) border-box;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.268) 0%, rgba(0,0,0,0) 100%);
+  border: 2px solid #454c56;
+  border-right: none;
   box-shadow: none;
-  border: 1px solid transparent;
   outline: none;
 }
 
@@ -88,8 +94,6 @@
 
 .attach-button svg {
   color: #E1E1E1;
-  height: 1.5rem;
-  width: 1.5rem;
   transition: transform 0.2s ease;
 }
 
@@ -99,19 +103,19 @@
 }
 
 .send-button:where(.css-dev-only-do-not-override-1rqnfsa).ant-btn-lg.ant-btn-icon-only {
-  background: linear-gradient(to bottom right, #C9C9C94D, #C4C4C41A) padding-box, 
-              linear-gradient(to bottom left, #FFFFFF4D, #D3D3D31A) border-box;
-  border: 1px solid transparent;
+  background: #454c56;
+  transition: .2s;
+  border: 2px solid #454c56;
   border-left: none;
   height: 100%;
   max-height: 3rem;
   width: 6rem;
   max-width: 10vw;
+
 }
 
 .send-button:where(.css-dev-only-do-not-override-1rqnfsa).ant-btn-lg.ant-btn-icon-only:hover {
-  background: linear-gradient(to bottom right, #C9C9C980, #C4C4C433) padding-box, 
-              linear-gradient(to bottom left, #FFFFFF80, #D3D3D333) border-box;
+  background: #a7adb79b;
 }
 
 .send-button svg {
