--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -2,6 +2,11 @@
   color: #FFFFFF80 !important;
 }
 
+.matches-total-matches-counter {
+  color: #FFFFFF;
+  font-size: 0.75rem;
+}
+
 .search-button-next:disabled, .search-button-prev:disabled {
   color: #FFFFFF40 !important;
   cursor: auto !important;
