--- a/src/components/SettingsMenu/components/ProfileMenu/styles.css
+++ b/src/components/SettingsMenu/components/ProfileMenu/styles.css
@@ -31,7 +31,7 @@ input-container {
   font-size: 1rem;
   line-height: 1.5;
   max-width: 13.5vw;
-  padding: 0;
+  padding: 0 1.5rem;
   text-align: center;
   transition: all 0.5s ease;
   text-overflow: ellipsis;
