--- a/src/components/menuInfo/style/style.css
+++ b/src/components/menuInfo/style/style.css
@@ -17,3 +17,11 @@ transition: all 0.5s ease !important;
 .option-button-container:hover, .option-button-container.active {
 background-color: #FFFFFF4D !important;
 }   
+
+.button-add-member:hover {
+    background-color: #434455 !important;
+}
+
+.button-remove-member:hover {
+    background-color: #434455 !important;
+}
