--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -3,35 +3,30 @@
   height: 100vh;
   display: flex;
   justify-content: start;
-  box-sizing: border-box;
   overflow: hidden;
   position: relative;
-  padding: 0 15px;
+  padding: 32px 15px;
 }
 
 .login_container_background_color {
   width: 100%;
   height: 100vh;
   background-color: #17212B;
-  opacity: 1;
   position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
+  inset: 0;
   z-index: -1;
 }
 
 .login_container_background_image {
   width: 100%;
-  height: 100vh;
-  background-image: url("../../assets/background.webp");
+  height: 100%;
+  min-height: 100vh;
   background-color: #17212B;
+  background-image: url("../../assets/background.webp");
   opacity: 0.3;
   background-size: cover;
   position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
+  inset: 0;
   z-index: -1;
 }
 
@@ -41,7 +36,6 @@
   display: flex;
   width: 100%;
   max-width: 380px;
-
 }
 
 .login_logo img {
