--- a/src/pages/Auth.module.css
+++ b/src/pages/Auth.module.css
@@ -1,36 +1,37 @@
-.login_container {
+.auth_container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: start;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
   padding: 32px 15px;
+  background-color: rgba(23,33,43,.7);
 }
 
-.login_container_background_color {
+.auth_container_background_color {
   width: 100%;
   height: 100vh;
-  background-color: #17212B;
+  background-color: #17212b;
   position: absolute;
   inset: 0;
-  z-index: -1;
+  z-index: -2;
 }
 
-.login_container_background_image {
+.auth_container::before {
+  content: "";
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background-color: #17212B;
-  background-image: url("../../assets/background.webp");
-  opacity: 0.3;
+  background-color: #17212b;
+  background-image: url("../assets/background.webp");
   background-size: cover;
   position: absolute;
   inset: 0;
   z-index: -1;
 }
 
-.login_logo {
+.auth_logo {
   align-items: center;
   justify-content: center;
   display: flex;
@@ -38,8 +39,7 @@
   max-width: 380px;
 }
 
-.login_logo img {
+.auth_logo img {
   width: 100%;
   object-fit: contain;
 }
-
