--- a/src/components/Auth/AuthContainer.module.css
+++ b/src/components/Auth/AuthContainer.module.css
@@ -2,10 +2,11 @@
   width: 100%;
   max-width: 420px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  backdrop-filter: blur(10px);
+  padding: 32px;
+  backdrop-filter: blur(24px);
   background: rgb(0, 0, 0);
   background: linear-gradient(150deg, rgba(0, 0, 0, 0.13) 0%, rgba(249, 249, 249, 0.146) 100%);
-  border-radius: 10px;
+  border-radius: 32px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.13);
   color: #fff;
 }
