--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --pure-primary: #39ff14;
-  --pure-secundary: #1481ff;
+  --pure-secondary: #1481ff;
   --pure-alert: #ffab14;
   --pure-warn: #ff142f;
 
@@ -22,6 +22,32 @@
   --t-warn-30: #ffb2bb;
   --t-warn-40: #ffdbdf;
 
+  /*== Shadows ==*/
+  --shadow-primary-100: #23db00;
+  --shadow-primary-200: #1aab00;
+  --shadow-primary-300: #199e00;
+  --shadow-primary-400: #137a00;
+  --shadow-primary-500: #0f6100;
+  --shadow-primary-600: #0c4d00;
+  --shadow-primary-700: #0a3d00;
+
+  --shadow-alert-100: #dbb000;
+  --shadow-alert-200: #a86c00;
+  --shadow-alert-300: #9e6600;
+  --shadow-alert-400: #7a4f00;
+  --shadow-alert-500: #613e00;
+  --shadow-alert-600: #4d3100;
+  --shadow-alert-700: #3d2700;
+
+  --shadow-warn-100: #db0019;
+  --shadow-warn-200: #ab0013;
+  --shadow-warn-300: #9e0012;
+  --shadow-warn-400: #7a000e;
+  --shadow-warn-500: #61000b;
+  --shadow-warn-600: #4d0009;
+  --shadow-warn-700: #3d0007;
+
+
   /* Fonts */
   --primary-font: Roboto, system-ui;
   --secundary-font: Montserrat, system-ui;
@@ -30,10 +56,18 @@
   /*== Neutral pallete ==*/
   --neutral-900: #151719;
   --neutral-800: #1c1e22;
+  --neutral-700: #22262a;
+  --neutral-600: #373d43;
   --neutral-500: #474E57;
   --neutral-400: #4C545D;
+  --neutral-300: #636d79;
+  --neutral-200: #7e8995;
   --neutral-100: #9aa3ac;
   --neutral-50: #c1c6cd;
+  --neutral-30: #c1c6cd;
+  --neutral-20: #ebe0ef;
+  --neutral-10: #f7f7f8;
+  --neutral-0: #ffffff;
 
 
   font-family: "Roboto", "Montserrat", system-ui, sans-serif;
