Style: use correct indentation

--- a/src/components/Auth/AuthContainer.module.css
+++ b/src/components/Auth/AuthContainer.module.css
@@ -12,5 +12,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .auth_container {background: var(--neutral-800)}
+  .auth_container {
+    background: var(--neutral-800)
+  }
 }
