Fix: use correct value for the neutral-30 variable

--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@
   --neutral-200: #7e8995;
   --neutral-100: #9aa3ac;
   --neutral-50: #c1c6cd;
-  --neutral-30: #c1c6cd;
+  --neutral-30: #d5d8dd;
   --neutral-20: #ebedef;
   --neutral-10: #f7f7f8;
   --neutral-0: #ffffff;
