--- a/src/components/Aside/aside.module.css
+++ b/src/components/Aside/aside.module.css
@@ -15,7 +15,7 @@
   border-right: .5px solid rgba(255, 255, 255, 0.1);
 }
 
-.chat__sidebar button {
+.chat__sidebar button:not(.chat__userAvatar) {
   padding: 4px !important;
   border: 1px solid
 }
@@ -44,9 +44,11 @@
   background: transparent;
   border: none;
   padding: 0;
-  height: 50px;
+  height: 50px !important;
 }
 
 .chat__avatar {
   background: var(--neutral-100);
+  height: 50px;
+  width: 50px;
 }
