fix/styles: InputBar and ChatBubble body scroll bugs and change app bg

--- a/src/pages/App/app.module.css
+++ b/src/pages/App/app.module.css
@@ -34,5 +34,5 @@
   min-height: 64px;
   padding: 12px 24px;
   margin: 0;
-  background-color: var(--neutral-800);
+  background-color: #17212B;
 }
