--- a/src/pages/App/app.module.css
+++ b/src/pages/App/app.module.css
@@ -14,7 +14,6 @@
 
 .chat__background {
   position: relative;
-  background: linear-gradient(rgb(87 132 199) 30%, rgb(162 77 175 / 50%) 100%);
   mix-blend-mode: screen;
 }
 
@@ -28,6 +27,15 @@
   background-size: cover;
   background-position: center;
   filter: brightness(-15%) opacity(0.1);
+}
+
+.chat__welcomeMessageBackground {
+  position: relative;
+  background: #17212B;
+  mix-blend-mode: screen;
+  height: 100svh;
+  overflow: hidden;
+  width: 100%;
 }
 
 .chat__actionsInUserOrGroup {
