--- a/src/components/InputBar/style.css
+++ b/src/components/InputBar/style.css
@@ -30,7 +30,7 @@
   background: #17212B;
   width: 100%;
   display: flex;
-  padding: 0 1rem;
+  /* padding: 0 rem; */
   box-sizing: border-box;
   height: 100%;
   gap: 20px;
