fix: size bug and remove query persister

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,8 @@ body {
 
 /* scrollbar styles */
 ::-webkit-scrollbar {
-  width: 1px;
+  width: 0.1vw;
+  height: 0.1vw;
 }
 
 ::-webkit-scrollbar-thumb,
